fix saved searchers scrollbar, move toggle fullscreen

--- a/static/searcher/searcher.css
+++ b/static/searcher/searcher.css
@@ -179,7 +179,7 @@ With scroll head for some reason there are v-a: middle on td  */
 }
 
 #saved-searches-panel{
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 250px ;
   display: block;
 }
